--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Surprise For My Affu 💖</title>
-  <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
   <style>
     body {
       background-color: #000;
-      font-family: 'Indie Flower', cursive;
+      font-family: 'Pacifico', cursive;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -70,9 +70,9 @@
     .heart-rain span {
       position: absolute;
       color: #ff69b4;
-      animation: fall 4s linear infinite;
+      animation: fall 6s linear forwards;
       font-size: 24px;
-      opacity: 0.8;
+      opacity: 0.9;
     }
 
     @keyframes fall {
@@ -80,7 +80,7 @@
         transform: translateY(-100px);
         opacity: 0;
       }
-      20% {
+      10% {
         opacity: 1;
       }
       100% {
@@ -114,28 +114,33 @@
 
   <script>
     function nextStep(current) {
-      // Hide current step
       document.getElementById(`step${current}`).style.display = "none";
-
-      // Show next step
       const next = document.getElementById(`step${current + 1}`);
       if (next) {
         next.style.display = "block";
       }
 
-      // If final step, start heart rain
       if (current === 3) {
-        const heartContainer = document.getElementById("heartRain");
-        for (let i = 0; i < 40; i++) {
-          let heart = document.createElement("span");
-          heart.innerHTML = "💗";
-          heart.style.left = Math.random() * 100 + "vw";
-          heart.style.fontSize = (Math.random() * 20 + 10) + "px";
-          heart.style.animationDuration = (Math.random() * 3 + 2) + "s";
-          heart.style.animationDelay = (Math.random() * 3) + "s";
-          heartContainer.appendChild(heart);
-        }
+        startHeartRain();
       }
+    }
+
+    function startHeartRain() {
+      const heartContainer = document.getElementById("heartRain");
+      setInterval(() => {
+        let heart = document.createElement("span");
+        heart.innerHTML = "💗";
+        heart.style.left = Math.random() * 100 + "vw";
+        heart.style.fontSize = (Math.random() * 20 + 15) + "px";
+        heart.style.animationDuration = "6s";
+        heart.style.animationDelay = "0s";
+        heartContainer.appendChild(heart);
+
+        // remove after animation ends
+        setTimeout(() => {
+          heart.remove();
+        }, 7000);
+      }, 250); // one heart every 250ms
     }
   </script>
 
